--- a/sites/all/modules/custom/jsphylosvg/jsphylosvg.css
+++ b/sites/all/modules/custom/jsphylosvg/jsphylosvg.css
@@ -1,5 +1,8 @@
-.jsphylosvg.rectangular{
-max-height:500px;
-overflow-y:auto;
-overflow-x:hidden;
+.jsphylosvg.rectangular-constrain{
+  max-height:500px;
+  overflow-y:auto;
+  overflow-x:hidden;
+}
+.jsphylosvg-save{
+  text-align:right;
 }
