Allow show/hide the data.

--- a/sites/all/modules/custom/jsphylosvg/jsphylosvg.css
+++ b/sites/all/modules/custom/jsphylosvg/jsphylosvg.css
@@ -3,6 +3,10 @@
   overflow-y:auto;
   overflow-x:hidden;
 }
+.jsphylosvg-data{
+  display:none;
+  margin:10px 0;
+}
 .jsphylosvg-save{
   text-align:right;
 }
